<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_workmate">Workmate</string>
    <string name="title_restaurant">Restaurant</string>
    <string name="title_map">Map</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="open_nav_drawer">open navigation drawer</string>
    <string name="close_nav_drawer">close navigation drawer</string>
    <string name="email_user_header">email</string>
    <string name="user_name">user_name</string>
    <string name="go4lunch_logo">Go4Lunch Logo</string>
    <string name="app_slogan">Find a nice restaurant and invite your co-workers for lunch</string>
    <string name="open_until_xpm">Open until Xpm</string>
    <string name="restaurant_address">82 Bd de Clichy, 75018 Paris</string>
    <string name="type_of_food">French -</string>
    <string name="restaurant_name">Moulin Rouge</string>
    <string name="coworker_number">(2)</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Go4Lunch\'</string>
    <string name="permission_required_toast">Location permission is required for this app.</string>
    <string name="no_restaurant">No Restaurant to show</string>
    <string name="is_open">Open</string>
    <string name="is_close">Close</string>
    <string name="restaurant_check">button to chose the restaurant of the day</string>
    <string name="web_icon">website</string>
    <string name="favorite_button">Fav Button</string>
    <string name="details_favorite_button">Button to Fav and save restaurant</string>
    <string name="call_button">call</string>
    <string name="place_details_fields">name,formatted_address,photo,type,formatted_phone_number,opening_hours,website,place_id,rating</string>
    <string name="type_gmap_query">restaurant</string>
    <string name="language">Language:</string>
    <string name="notification_title_string">Notification:</string>
    <string name="notification_choice">Manager notifications</string>
    <string name="no_restaurant_your_lunch">No restaurant selected</string>
    <string name="string_welcome_back">Welcome_back</string>
    <string name="string_welcome_new_user">Welcome New User</string>
    <string name="manage_notification">Manage notification</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="notification_title">Notification:</string>
    <string name="alow_notification_toast">Go4Lunch will send you a daily notification</string>
    <string name="workmateNumberClose">)</string>
    <string name="workmateNumberOpen">(</string>
    <string name="toolbar_search_icon">toolbar search Icon</string>
    <string name="icon_go4lunch_navigation_view">Icon Go4Lunch</string>
    <string name="notification_check_box_text">Enable notifications for this app</string>
    <string name="location">Location:</string>
    <string name="location_checkbox_text">Enable location for this app</string>
    <string name="global_setting_button_text">Global Application Setting</string>
    <string name="logout_dialog_text">Want to logout ?</string>
    <string name="login_title">Login</string>
    <string name="login">Login</string>
    <string name="enable_location_in_settings">enable location in settings</string>
    <string name="no">no</string>
    <string name="yes">"yes "</string>
    <string name="sure_logout">Are you sure you want to logout?</string>
    <string name="exit_application">Exit Application</string>
    <string name="access_global_settings">Access Global Settings</string>
    <string name="change_your_profile">Change your profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_confirmation_title">DELETE Account</string>
    <string name="delete_account_confirmation_message">Are you sure you want to delete your account ?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="failed_to_delete_account">An error occurred on\n account deletion</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="username">UserName</string>
    <string name="enter_email">Enter email</string>
    <string name="email">Email:</string>
    <string name="enter_name">Enter name</string>
    <string name="avatar">Avatar:</string>
    <string name="favorite_restaurant">Favorite Restaurant:</string>
    <string name="savebutton">SaveButton</string>
    <string name="go_to_app_settings">Go to app settings</string>
    <string name="sort_by_distance">Sort by distance</string>
    <string name="sort_by_number_of_workers">Sort by number of workers</string>
    <string name="sort_by_rating">Sort by rating</string>
    <string name="remember_to_come_at">" remember to come at: "</string>
    <string name="no_other_coworker_signal">" no other coworker signal"</string>
    <string name="workmate_picture_place_holder">workmate picture place holder</string>
    <string name="with">" with: "</string>
    <string name="sign_in_cancelled">Sign In Cancelled</string>
    <string name="sign_in_failed">Sign In Failed</string>
</resources>