<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity">


            <item
                android:id="@+id/sort_by_proximity"
                android:icon="@drawable/baseline_location_on_24"
                android:title="@string/sort_by_distance"
                app:showAsAction="never|withText" />
            <item
                android:id="@+id/sort_by_workmate_number"
                android:icon="@drawable/baseline_person_24"
                android:title="@string/sort_by_number_of_workers"
                app:showAsAction="never|withText" />
            <item
                android:id="@+id/sort_by_rate"
                android:title="@string/sort_by_rating"
                android:icon="@drawable/baseline_star_24"
                app:showAsAction="never|withText" />



</menu>