<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="@dimen/activity_vertical_margin"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_setting_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/red"
        app:titleTextColor="@color/white"
        app:title="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_24">

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/global_setting_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:textSize="24sp"
        android:padding="16dp"
        android:text="@string/access_global_settings"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@id/activity_setting_toolbar"
        android:focusable="true"
        android:background="@drawable/textview_border"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/change_profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:textSize="24sp"
        android:padding="16dp"
        android:text="@string/change_your_profile"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@id/global_setting_button"
        android:focusable="true"
        android:background="@drawable/textview_border"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/delete_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:textSize="24sp"
        android:padding="16dp"
        android:text="@string/delete_account"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:focusable="true"
        android:background="@drawable/textview_border"
        />

</androidx.constraintlayout.widget.ConstraintLayout>