<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/restaurant_item_picture"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/restaurant_item_name"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="4dp"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/restaurant_item_distance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/restaurant_name" />

        <TextView
            android:id="@+id/restaurant_item_distance"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:textAlignment="viewEnd"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@id/restaurant_item_picture"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="500m" />


        <TextView
            android:id="@+id/restaurant_item_food"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginLeft="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/restaurant_item_address"
            tools:text="@string/type_of_food" />

        <TextView
            android:id="@+id/restaurant_item_address"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toTopOf="@+id/restaurant_item_time"
            app:layout_constraintEnd_toEndOf="@id/restaurant_item_name"
            app:layout_constraintStart_toEndOf="@id/restaurant_item_food"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_item_name"
            tools:text="@string/restaurant_address" />

        <TextView
            android:id="@+id/restaurant_item_time"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/restaurant_item_rating"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/open_until_xpm"/>

        <RatingBar
            android:id="@+id/restaurant_item_rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:numStars="3"
            app:layout_constraintEnd_toStartOf="@id/restaurant_item_picture"
            app:layout_constraintTop_toTopOf="@+id/restaurant_item_time" />

        <TextView
            android:id="@+id/restaurant_item_number_coworker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/restaurant_item_picture"
            app:layout_constraintTop_toTopOf="@id/restaurant_item_address"
            tools:text="@string/coworker_number"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>