<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/detail_appBar"
        android:layout_width="match_parent"
        android:layout_height="380dp">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/red"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/white"/>

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/orange"
            app:layout_scrollFlags="scroll">
            <ImageView
                android:id="@+id/detail_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/details_restaurant_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@color/orange"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/restaurant_detail_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/restaurant_name"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RatingBar
                    android:id="@+id/restaurant_details_rating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:numStars="3"
                    app:layout_constraintStart_toEndOf="@id/restaurant_detail_name"
                    app:layout_constraintTop_toTopOf="@+id/restaurant_detail_name" />

                <TextView
                    android:id="@+id/restaurant_detail_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/restaurant_address"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/restaurant_detail_name" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/call_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/call_button"
                android:textColor="@color/orange"
                app:drawableTopCompat="@drawable/baseline_call_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_restaurant_info" />

            <ImageButton
                android:id="@+id/fav_button"
                android:layout_width="29dp"
                android:layout_height="28dp"
                android:background="@drawable/baseline_star_border_24"
                app:layout_constraintEnd_toStartOf="@+id/web_icon"
                app:layout_constraintStart_toEndOf="@+id/call_icon"
                app:layout_constraintTop_toTopOf="@+id/call_icon"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/details_favorite_button" />

            <TextView
                android:id="@+id/detail_like_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_button"
                android:textColor="@color/orange"

                app:layout_constraintBottom_toBottomOf="@id/call_icon"
                app:layout_constraintEnd_toEndOf="@+id/fav_button"
                app:layout_constraintStart_toStartOf="@+id/fav_button"
                app:layout_constraintTop_toBottomOf="@+id/fav_button" />

            <TextView
                android:id="@+id/web_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:text="@string/web_icon"
                android:textColor="@color/orange"
                app:layout_constraintBottom_toBottomOf="@+id/call_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/call_icon"
                app:drawableTopCompat="@drawable/baseline_earth_24"
                android:clickable="true"
                android:focusable="true" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/detail_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintTop_toBottomOf="@+id/call_icon"
                tools:listitem="@layout/item_workmate"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/chose_restaurant_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/baseline_check_circle_outline_24"
        app:backgroundTint="@color/white"
        app:fabSize="normal"
        app:layout_anchor="@id/detail_appBar"
        app:layout_anchorGravity="end|bottom"
        android:contentDescription="@string/restaurant_check" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>